[package]
name = "special_numbers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.5"
solana-program = "1.18.26"

[dev-dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
tokio = "1.43.0"
serde_json = "1.0.138"
shellexpand = "3.1.0"
rand = "0.9.0"

[[example]]
name = "client"
path = "example/client.rs"
